Agentic HOL lab fixes (#31)
* Fix typo in declarative.ignore-incubating:
* Validate path to zip file early in ingestor so friendly error comes quickly
* Fix mvnw typo, remove java option that only works with Java 25. Clarify last step requires no action.
* Fix typo in ignore-incubating
* Fix ignore-incubating typo